# scratchpad

./: .gitmodules  CMakeLists.txt  FindNumPy.cmake  cmake_build.py  setup.py
csrc/: b_scratchpad.cpp  b_scratchpad.h  fix15.h  init.cpp  library.h  mypaint-all.h  scratchpad.cpp  scratchpad.h  util.h
lib/thread_pool/: thread_pool.h
scratchpad/: __init__.py
scratchpad/brushes/: __init__.py
test/: test_basic.py  test_batched.py  test_batched_fps.py  test_fps.py
